--- a/templates/mw_property.j2
+++ b/templates/mw_property.j2
@@ -1,9 +1,9 @@
 
 Imported from [[Imported from::{{ ns }}:{{ item_name }}]]
 
-Equivalent URI [[Equivalent URI::{{ item_dict['subject'] }}]]
+Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
 
-Has type [[Has type::{{ item_dict['smw_datatype'] }}]]
+Has type [[Has type::{{ item['smw_datatype'] }}]]
 
 
-{{ item_dict['smw_import_info'] }}
+{{ item['smw_import_info'] }}
