removing restriction on subpropertyOf / subclassOf from other Namespaces

--- a/templates/mw_property.j2
+++ b/templates/mw_property.j2
@@ -6,7 +6,7 @@ Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
 Has type [[Has type::{{ item['smw_datatype'] }}]]
 
 
-{% if 'aeon' in item['subpropertyof']  %}  {# exclude subpropertyof of other NS #}
+{% if item['subpropertyof']  %}
 Subcategory of [[Subproperty of::{{ item['subpropertyof']|urlfragment }}]]
 {% endif %}
 
