[[Category:domain]] added to property template

--- a/templates/mw_property.j2
+++ b/templates/mw_property.j2
@@ -5,6 +5,9 @@ Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
 
 Has type [[Has type::{{ item['smw_datatype'] }}]]
 
+{% if item['domain']  %}
+    Domain [[Domain::Category:{{ item['domain']|urlfragment }}]]
+{% endif %}
 
 {% if item['subpropertyof']  %}
 Subcategory of [[Subproperty of::{{ item['subpropertyof']|urlfragment }}]]
