templates handling IRI endings with both #ending or somthing/ending

--- a/templates/mw_category.j2
+++ b/templates/mw_category.j2
@@ -3,8 +3,8 @@ Imported from [[Imported from::{{ ns }}:{{ item_name }}]]
 
 Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
 
-{% if item['subclassof']  and item['subclassof'] != '' %}
-Subcategory of [[:Category:{{ item['subclassof']|urlfragment }}]] [[Category:{{ item['subclassof']|urlfragment }}]]
+{% if item['subclassof'] and item['subclassof'] != '' %}
+Subcategory of [[:Category:{{ item['subclassof']|url_termination }}]] [[Category:{{ item['subclassof']|url_termination }}]]
 {% endif %}
 
 {{ item['smw_import_info'] }}
