--- a/templates/mw_smw_import.j2
+++ b/templates/mw_smw_import.j2
@@ -3,4 +3,4 @@
  {{ resource_tuple[0] }}|{{ resource_tuple[1] }}
 {%- endfor %}
 
-[[Category:Imported vocabulary]] [[Category:{{ ns|upper }}]]
+[[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
