--- a/templates/mw_property.j2
+++ b/templates/mw_property.j2
@@ -1,5 +1,5 @@
 
-Imported from [[Imported from::{{ ns }}:{{ item_name }}]]
+Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
 
 Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
 
