Property template Equilavent URI uses {{term}}

--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -1,7 +1,7 @@
 
 Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
 
-Equivalent URI [[Equivalent URI::{{ item['subject'] }}]]
+Equivalent URI [[Equivalent URI::{{ term }}]]
 
 Has type [[Has type::{{ item['smw_datatype'] }}]]
 
