--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -3,7 +3,7 @@ Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
 
 Equivalent URI [[Equivalent URI::{{ term }}]]
 
-Has type [[Has type::{{ item['smw_datatype'] }}]]
+Has type [[Has type::{{ prop_datatype }}]]
 
 {% if item['domain']  %}
 Domain [[Domain::Category:{{ item['domain']|url_termination }}]]
@@ -13,6 +13,6 @@ Domain [[Domain::Category:{{ item['domain']|url_termination }}]]
 Subcategory of [[Subproperty of::{{ item['subpropertyof']|url_termination }}]]
 {% endif %}
 
-{% if term_description %}Property description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
+{% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
 
 {{ item['smw_import_info'] }}
