removed distracting print

--- a/ontology2smw/templates/mw_category.j2
+++ b/ontology2smw/templates/mw_category.j2
@@ -9,4 +9,4 @@ Subcategory of [[:Category:{{ item['subclassof']|url_termination }}]] [[Category
 
 {% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
 
-{{ item['smw_import_info'] }}
+[[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
