--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -15,4 +15,4 @@ Subcategory of [[Subproperty of::{{ item['subpropertyof']|url_termination }}]]
 
 {% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
 
-{{ item['smw_import_info'] }}
+[[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
