removed redundant jinja de render_template() variable term

--- a/ontology2smw/templates/mw_category.j2
+++ b/ontology2smw/templates/mw_category.j2
@@ -1,7 +1,7 @@
 
 Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
 
-Equivalent URI [[Equivalent URI::{{ term }}]]
+Equivalent URI [[Equivalent URI::{{ item['term'] }}]]
 
 {% if item['subclassof'] and item['subclassof'] != '' %}
 Subcategory of [[:Category:{{ item['subclassof']|url_termination }}]] [[Category:{{ item['subclassof']|url_termination }}]]
