--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -1,7 +1,7 @@
 
 Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
 
-Equivalent URI [[Equivalent URI::{{ term }}]]
+Equivalent URI [[Equivalent URI::{{ item['term'] }}]]
 
 Has type [[Has type::{{ prop_datatype }}]]
 
