--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -1,16 +1,16 @@
 
-Imported from [[Imported from::{{ ns_prefix }}:{{ item_name }}]]
+Imported from [[Imported from::{{ ns_prefix }}:{{ term_name }}]]
 
-Equivalent URI [[Equivalent URI::{{ item['term'] }}]]
+Equivalent URI [[Equivalent URI::{{ term_dict['term'] }}]]
 
 Has type [[Has type::{{ prop_datatype }}]]
 
-{% if item['domain']  %}
-Domain [[Domain::Category:{{ item['domain']|url_termination }}]]
+{% if term_dict['domain']  %}
+Domain [[Domain::Category:{{ term_dict['domain']|url_termination }}]]
 {% endif %}
 
-{% if item['subpropertyof']  %}
-Subcategory of [[Subproperty of::{{ item['subpropertyof']|url_termination }}]]
+{% if term_dict['subpropertyof']  %}
+Subcategory of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }}]]
 {% endif %}
 
 {% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
