term_description: replaced by term_dict['label']

--- a/ontology2smw/templates/mw_category.j2
+++ b/ontology2smw/templates/mw_category.j2
@@ -7,6 +7,6 @@ Equivalent URI [[Equivalent URI::{{ term_dict['term'] }}]]
 Subcategory of [[:Category:{{ term_dict['subclassof']|url_termination }}]] [[Category:{{ term_dict['subclassof']|url_termination }}]]
 {% endif %}
 
-{% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
+{% if term_dict['label'] %}Term description: [[Has property description::{{ term_dict['label'] }}@{{ term_description_lang }}]]{% endif %}
 
 [[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
