--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -13,6 +13,6 @@ Domain [[Domain::Category:{{ term_dict['domain']|url_termination }}]]
 Subcategory of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }}]]
 {% endif %}
 
-{% if term_description %}Term description: [[Has property description::{{ term_description }}@{{ term_description_lang }}]]{% endif %}
+{% if term_dict['label'] %}Term description: [[Has property description::{{ term_dict['label'] }}@{{ term_description_lang }}]]{% endif %}
 
 [[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
