--- a/ontology2smw/templates/mw_category.j2
+++ b/ontology2smw/templates/mw_category.j2
@@ -6,7 +6,7 @@ Equivalent URI [[Equivalent URI::{{ term_dict['term'] }}]]
 {% if term_dict['subclassof'] and term_dict['subclassof'] != '' %}
 Subcategory of [[:Category:{{ term_dict['subclassof']|url_termination }}]] [[Category:{{ term_dict['subclassof']|url_termination }}]]
 {% endif %}
-
-{% if term_dict['label'] %}Term description: [[Has property description::{{ term_dict['label'] }}@{{ term_description_lang }}]]{% endif %}
-
+{% if term_dict['label'] %}
+Term description: [[Has property description::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
+{% endif %}
 [[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
