--- a/ontology2smw/templates/mw_smw_import.j2
+++ b/ontology2smw/templates/mw_smw_import.j2
@@ -1,5 +1,5 @@
 {{ page_info['ontology_ns'] }}|[{{ page_info['ontology_ns'] }} {{ ns_prefix }}]
-{% for resource_tuple in item %}
+{% for resource_tuple in term_dict %}
  {{ resource_tuple[0] }}|{{ resource_tuple[1] }}
 {%- endfor %}
 
