--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -9,7 +9,7 @@ Has type [[Has type::{{ prop_datatype }}]]
 Domain [[Domain::Category:{{ term_dict['domain']|url_termination }}]]
 {% endif %}
 {% if term_dict['subpropertyof']  %}
-Subcategory of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }}]]
+Subproperty of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }}]]
 {% endif %}
 {% if term_dict['label'] %}
 Term description: [[Has property description::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
