--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -14,5 +14,8 @@ Subproperty of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }
 {% if term_dict['label'] %}
 Term description: [[Has property description::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
 {% endif %}
+{% if term_dict['smw_import_info']  %}
+{{ term_dict['smw_import_info'] }}
+{% else %}
 [[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
-
+{% endif %}
