replaced Term description with Label and Property description Has preferred property label

--- a/ontology2smw/templates/mw_category.j2
+++ b/ontology2smw/templates/mw_category.j2
@@ -7,7 +7,7 @@ Equivalent URI [[Equivalent URI::{{ term_dict['term'] }}]]
 Subcategory of [[:Category:{{ term_dict['subclassof']|url_termination }}]] [[Category:{{ term_dict['subclassof']|url_termination }}]]
 {% endif %}
 {% if term_dict['label'] %}
-Term description: [[Has property description::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
+Label: [[Has preferred property label::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
 {% endif %}
 {% if term_dict['smw_import_info']  %}
 {{ term_dict['smw_import_info'] }}
