--- a/ontology2smw/templates/mw_property.j2
+++ b/ontology2smw/templates/mw_property.j2
@@ -14,8 +14,7 @@ Subproperty of [[Subproperty of::{{ term_dict['subpropertyof']|url_termination }
 {% if term_dict['label'] %}
 Label: [[Has preferred property label::{{ term_dict['label'] }}{% if term_dict['label'].language %}@{{ term_dict['label'].language }}{% endif %}]]
 {% endif %}
-{% if term_dict['smw_import_info']  %}
-{{ term_dict['smw_import_info'] }}
-{% else %}
-[[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
+{% if term_dict['definition'] %}
+Definition: [[Has property description::{{ term_dict['definition'] }}{% if term_dict['definition'].language %}@{{ term_dict['definition'].language }}{% endif %}]]
 {% endif %}
+[[Category:Imported vocabulary]] [[Category:{{ ns_prefix|upper }}]]
